# spp

./: CMakeLists.txt  README.md
Test/: main.cpp
include/: S++.h
include/asm/: Asm.h
include/core/: Core.h  Preprocessor.h  Types.h
include/spp/: IVirtualMachine.h  S++.h  SppCommon.h
samples/test/: main.cpp
src/Spp/: S++.cpp
src/Spp/AsmVM/: CAsmVM.cpp  CAsmVM.h  ParserTypes.h  VMInstructionImpl.h  VMTypes.h
src/Spp/AsmVM/Compiler/: CCompilerASM.cpp  CCompilerASM.h  CCompilerISA.cpp  CCompilerISA.h
src/Spp/AsmVM/LexicalAnalyzer/: CLexicalAnalyzerASM.h
src/Spp/AsmVM/Parser/: CParserASM.cpp  CParserASM.h  CParserISA.cpp  CParserISA.h
src/Spp/CSharpScript/: CMonoVM.cpp  CMonoVM.h  CScript.cpp  CScript.h
src/Spp/DynamicLibraryScript/: CDynLibVM.cpp  CDynLibVM.h  CScript.cpp  CScript.h  PlatformAPI.h
src/Spp/DynamicLibraryScript/Win32/: PlatformAPI.cpp
src/Spp/Platform/: PlatformAPI.h
src/Spp/Platform/Win32/: PlatformAPI.cpp
src/Spp/Utils/: CCompiler.cpp  CCompiler.h
src/asm/: Asm.cpp
src/spp/: DllMain.cpp
