cmake_minimum_required (VERSION 2.6)

set(ENGINE_NAME "S++")
set(PROJECT_NAME "${ENGINE_NAME}")
set(CORE_ENGINE_NAME "${ENGINE_NAME}_core")
set(BIN_ENGINE_NAME "${ENGINE_NAME}_bin")
set(ASM_ENGINE_NAME "${ENGINE_NAME}_asm")
set(HL_ENGINE_NAME "${ENGINE_NAME}_hl")

set(BIN_DIR "${CMAKE_CURRENT_SOURCE_DIR}/bin")
set(LIB_DIR "${CMAKE_CURRENT_SOURCE_DIR}/lib")
set(INC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")
SET(SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
SET(THIRD_PARTY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src/ThirdParty")
SET(LIB_TYPE)
SET(DLL_EXPORT_MACRO "SPP_API_EXPORT")
#MESSAGE("bin dir: '${CMAKE_CURRENT_BINARY_DIR}' '${CMAKE_RUNTIME_OUTPUT_DIRECTORY}' '${CMAKE_LIBRARY_OUTPUT_DIRECTORY}'")

#SPPngine_Core
#add_subdirectory("${THIRD_PARTY_DIR}/SpirV/glslang")

set(LIB_NAME "${CORE_ENGINE_NAME}")
set(LIB_INCLUDE_DIR_PATH "Core")
set(LIB_SOURCE_DIR_PATH "Core")
SET(LIB_DEPENDENCIES)
SET(LINK_RELEASE_LIBS)
set(LINK_DEBUG_LIBS)
include(EngineLib.cmake NO_POLICY_SCOPE)
set(CORE_ENGINE_NAME_LIB_RELEASE "${LIB_RELEASE_NAME}")
set(CORE_ENGINE_NAME_LIB_DEBUG "${LIB_DEBUG_NAME}")

#SPPngine_RenderSystem
set(LIB_NAME "${BIN_ENGINE_NAME}")
set(LIB_INCLUDE_DIR_PATH "bin")
set(LIB_SOURCE_DIR_PATH "bin")
SET(LIB_DEPENDENCIES ${CORE_ENGINE_NAME})
SET(LINK_RELEASE_LIBS ${CORE_ENGINE_NAME_LIB_RELEASE})
set(LINK_DEBUG_LIBS ${CORE_ENGINE_NAME_LIB_DEBUG})
include(EngineLib.cmake NO_POLICY_SCOPE)
set(BIN_ENGINE_NAME_LIB_RELEASE "${LIB_RELEASE_NAME}")
set(BIN_ENGINE_NAME_LIB_DEBUG "${LIB_DEBUG_NAME}")


set(LIB_NAME "${ASM_ENGINE_NAME}")
set(ASM_NAME ${LIB_NAME})
set(LIB_INCLUDE_DIR_PATH "asm")
set(LIB_SOURCE_DIR_PATH "asm")
SET(LIB_DEPENDENCIES ${BIN_ENGINE_NAME})
SET(LINK_RELEASE_LIBS ${BIN_ENGINE_NAME_LIB_RELEASE})
set(LINK_DEBUG_LIBS ${BIN_ENGINE_NAME_LIB_DEBUG})
include(EngineLib.cmake NO_POLICY_SCOPE)
set(ASM_ENGINE_NAME_LIB_RELEASE "${LIB_RELEASE_NAME}")
set(ASM_ENGINE_NAME_LIB_DEBUG "${LIB_DEBUG_NAME}")


#SPPngine_Scene
set(LIB_NAME "${HL_ENGINE_NAME}")
set(LIB_INCLUDE_DIR_PATH "hl")
set(LIB_SOURCE_DIR_PATH "hl")
SET(LIB_DEPENDENCIES ${CORE_ENGINE_NAME} ${ASM_NAME})
SET(LINK_RELEASE_LIBS ${CORE_ENGINE_NAME_LIB_RELEASE} ${ASM_ENGINE_NAME_LIB_RELEASE})
SET(LINK_DEBUG_LIBS ${CORE_ENGINE_NAME_LIB_DEBUG} ${ASM_ENGINE_NAME_LIB_DEBUG})
include(EngineLib.cmake NO_POLICY_SCOPE)
set(HL_ENGINE_NAME_LIB_RELEASE "${LIB_RELEASE_NAME}")
set(HL_ENGINE_NAME_LIB_DEBUG "${LIB_DEBUG_NAME}")

#SPPngine
SET(LIB_TYPE SHARED)
set(LIB_NAME "${ENGINE_NAME}")
set(LIB_INCLUDE_DIR_PATH "spp")
set(LIB_SOURCE_DIR_PATH "spp")
SET(LIB_DEPENDENCIES ${CORE_ENGINE_NAME} ${ASM_ENGINE_NAME} ${HL_ENGINE_NAME})
SET(LINK_RELEASE_LIBS ${CORE_ENGINE_NAME_LIB_RELEASE} ${ASM_ENGINE_NAME_LIB_RELEASE} ${HL_ENGINE_NAME_LIB_RELEASE})
SET(LINK_DEBUG_LIBS ${CORE_ENGINE_NAME_LIB_DEBUG} ${ASM_ENGINE_NAME_LIB_DEBUG} ${HL_ENGINE_NAME_LIB_DEBUG})
include(EngineLib.cmake NO_POLICY_SCOPE)
set(SPP_ENGINE_NAME_LIB_RELEASE "${LIB_RELEASE_NAME}")
set(SPP_ENGINE_NAME_LIB_DEBUG "${LIB_DEBUG_NAME}")


# SAMPLES

set(SAMPLE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/samples")
set(INC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")
SUBDIRLIST(SAMPLE_SUBDIRS ${SAMPLE_DIR})
message("SAMPLE DIR LIST ${CMAKE_CURRENT_SOURCE_DIR} ${SAMPLE_SUBDIRS}")
foreach(DIR ${SAMPLE_SUBDIRS})
    message("${DIR} ${PROJECT_NAME}")
    set(FULLPATH_DIR "${SAMPLE_DIR}/${DIR}")
	set(SAMPLE_NAME "${ENGINE_NAME}_${DIR}")
    project(${SAMPLE_NAME} C CXX)
    set(APP_RELEASE_NAME "${SAMPLE_NAME}${ARCHITECTURE}")
    set(APP_DEBUG_NAME "${APP_RELEASE_NAME}_d")
    file(GLOB_RECURSE FILES ${FULLPATH_DIR}/*.h ${FULLPATH_DIR}/*.cpp)
    
    include_directories(${INC_DIR})
    link_directories(${LIB_DIR} ${BIN_DIR} ${LIB_SYMBOL_DEBUG_DIR} ${LIB_SYMBOL_RELEASE_DIR})
    
    add_executable(${SAMPLE_NAME} ${FILES})
    add_dependencies(${SAMPLE_NAME} ${ENGINE_NAME} ${HL_ENGINE_NAME} ${ASM_ENGINE_NAME} ${BIN_ENGINE_NAME})
    message("${SAMPLE_NAME}->${ENGINE_NAME}")
    
    set_target_properties(${SAMPLE_NAME} PROPERTIES OUTPUT_NAME_DEBUG ${APP_DEBUG_NAME})
    set_target_properties(${SAMPLE_NAME} PROPERTIES OUTPUT_NAME_RELEASE ${APP_RELEASE_NAME})
    set_target_properties(${SAMPLE_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG ${BIN_DIR})
    set_target_properties(${SAMPLE_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE ${BIN_DIR})
    
    set(LINK_LIB optimized ${LIB_RELEASE_NAME} debug ${LIB_DEBUG_NAME})
    target_link_libraries(${SAMPLE_NAME} ${LINK_LIB} ${ENGINE_NAME} ${HL_ENGINE_NAME} ${ASM_ENGINE_NAME} ${BIN_ENGINE_NAME})
endforeach()

#project(${ENGINE_NAME} C CXX)